# hermes

./: .env  README.md  REPORT.docx  main.py  pyproject.toml  requirements.txt
data/: shipment.csv
data/cache_store/: semantic_cache.faiss  semantic_cache.pkl
notebook/: test.ipynb
notebook/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/llm/: llm_client.py
src/prompts/: prompt.py
src/semantic_cache/: embedder.py  index_manager.py  operations.py
src/utils/: agent.py  helpers.py  predict_lr.py
